# hiv_program_tracker

./: .env  .env.example  hello.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: api-design.mdc  database-schema.mdc  feature.mdc  main-rules.mdc  project-overview.mdc  project-structure.mdc  technical-standards.mdc
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 038abc6353c5_create_initial_reference_data_models.py  abda7dbed73f_initial_migrations.py  eb61e5aeaf22_add_user_management_models.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  associations.py  base.py  facility.py  geography.py  program.py  user.py
scripts/: init_db.py  province_district_hospitals.json  seed.sh  seed_data.py
tests/: conftest.py  test_reference_models.py  test_security.py  test_user_models.py
