[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiv_program_tracker"
version = "0.1.0"
description = "HIV Program Activities Tracker"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.7.0",
    "asyncpg>=0.25.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = "."
